# VTP-dev-env

./: .gitmodules  Makefile  README.md  pyproject.toml
src/vtp/: __init__.py  api  cli  core  ops
src/vtp/web/: api
