[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "VTPDevEnv"
version = "0.1.0"
description = "The aggregate VTP pyproject files to produce a combined poetry environment for development and debugging"
authors = ["Ion Y <ion@osetinstitute.org>", "Neil Johnson <neil@cadent.com>", "Sandy Currier <windoverwater@users.noreply.github.com>"]
license = "GPL-2.0"
readme = "README.md"
packages = [
  { include = "vtp", from = "src" }
]

[tool.poetry.dependencies]
deepdiff = "^6.3.0"
fastapi = "^0.92.0"
httpx = "^0.23.3"
importlib-resources = "^5.12.0"
networkx = "^2.8.6"
pyinputplus = "^0.2.12"
python = "^3.9"
pyyaml = "^6.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.0"
pydantic = "^1.10.7"
pylint = "^2.16.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
sphinx = "^5.3.0"
types-pyyaml = "^6.0.12.8"

[tool.poetry.scripts]
accept-ballot = "vtp.cli.accept_ballot:main"
cast-ballot = "vtp.cli.cast_ballot:main"
create-blank-ballot = "vtp.cli.create_blank_ballot:main"
generate-all-blank-ballots = "vtp.cli.generate_all_blank_ballots:main"
merge-contests = "vtp.cli.merge_contests:main"
run-mock-election = "vtp.cli.run_mock_election:main"
setup-vtp-demo = "vtp.cli.setup_vtp_demo:main"
show-contest = "vtp.cli.show_contest:main"
tally-contests = "vtp.cli.tally_contests:main"
verify-ballot-receipt = "vtp.cli.verify_ballot_receipt:main"
vote = "vtp.cli.vote:main"
